VFS-5020 fixed overflow in ceph config collapsible list

--- a/src/app/styles/ceph-cluster-configuration.scss
+++ b/src/app/styles/ceph-cluster-configuration.scss
@@ -4,6 +4,9 @@
       border: 0;
     }
   }
+  .one-collapsible-list-item-content.opened {
+    overflow: visible;
+  }
   .main-options-form {
     .form {
       $label-width: 110px;
